compiler/tools/fpp-check/test/spec_init_old/undef_instance.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/spec_init_old/undef_instance.fpp: 1.6
init c0 phase 0 "c0 phase 0"
     ^
error: undefined symbol c0
